# hipsta-plate

./: .clang-tidy  .gitignore  CMakeLists.txt  MANUAL.md  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DattorroPlate.h
